added docs pages and started working on the web client
