# openapi.yml
@@ -4,16 +4,102 @@ info:
   description: |-
     FastCA REST API
   contact:
-    email: ryan.bell62101@gmail.com
+    email: ryan@gmail.com
   license:
     name: MIT
     url: https://opensource.org/license/mit
   version: 0.0.1
+servers:
+  - url: http://localhost:8080/api/v1
 tags:
   - name: certificate
     description: Certificate creation, deletion, and management
+  - name: certificate authority
+    description: Certificate authority creation, deletion, and management
+  - name: documentation
+    description: OpenAPI documentation
 paths:
-  /certificates:
+  /openapi.yml:
+    get:
+      summary: OpenAPI YAML spec file
+      tags:
+        - documentation
+      responses:
+        200:
+          description: OpenAPI YAML spec file
+          content: 
+            application/yaml:
+              schema:
+              example: | 
+                openapi: 3.0.0
+                info:
+                  title: FastCA
+                  description: |-
+                    FastCA REST API
+  /redoc:
+    get:
+      summary: Redoc OpenAPI spec viewer
+      tags:
+        - documentation
+      responses:
+        200:
+          description: HTML Redoc page
+          content:
+            text/html:
+              schema:
+
+  /ca/{caId}/fullchain:
+    get:
+      summary: Get the fullchain certificate for the certificate authority
+      tags:
+        - certificate authority
+      parameters:
+        - name: caId
+          in: path
+          required: true
+          schema:
+            type: integer
+            minimum: 0
+      responses:
+        200:
+          description: Certificate authority fullchain certificate
+          content:
+            application/octet-stream: 
+              schema:
+        4XX:
+          description: Client error
+          content:
+            application/json:
+              schema:
+                type: string          
+  /ca/list:
+    get:
+      summary: Get a list of certificate authorities managed by FastCA
+      tags:
+        - certificate authority
+      responses:
+        200:
+          $ref: '#/components/responses/CertificateListResponse'
+        4XX:
+          description: Client error
+          content:
+            application/json:
+              schema:
+                type: string
+  /ca:
+    post:
+      summary: Create a certificate authority
+      tags:
+        - certificate authority
+      responses:
+        4XX:
+          description: Client error
+          content:
+            application/json:
+              schema:
+                type: string
+
+  /certificate/list:
     get:
       summary: Get a list of certificates managed by FastCA
       tags:
@@ -101,9 +187,56 @@ components:
           type: string
           minLength: 3
           maxLength: 256
-          examples:
-            - Web Server Certificate
+          example: Web Server Certificate
+        caName:
+          type: string
+          minLength: 3
+          maxLength: 256
+          example: Web Server Certificate
+        certType:
+          type: string
+          minLength: 3
+          maxLength: 256
+          example: Web Server Certificate
     CertificateData:
+      type: object
+      required:
+        - name
+        - subject
+        - expires
+        - ca
+        - id
+      properties:
+        subject:
+          type: object
+          required:
+            - organization
+            - country
+          properties:
+            organization:
+              type: string
+            country:
+              type: string
+            province:
+              type: string
+            locality:
+              type: string
+            postalCode:
+              type: string
+            id:
+              type: integer
+        expires:
+          type: string
+          format: date-time
+        ca:
+          type: integer
+          description: ID of the CA that signs this certificate
+    CaPaginatedData:
+      type: object
+      required:
+        - name
+        - id
+    CaData:
       type: object
       required:
         - name
